# deep_learning

./: .gitignore  Cargo.toml
src/: main.rs
src/activation_function/: ReLU.rs  Tanh.rs  identity.rs  mod.rs  sigmoid.rs  sign.rs  step.rs
src/algorithm/: add_layer.rs  bottom_0.rs  bottom_1.rs  bottom_10.rs  bottom_2.rs  bottom_3.rs  bottom_4.rs  bottom_5.rs  bottom_6.rs  bottom_7.rs  bottom_8.rs  bottom_9.rs  mod.rs  mul_layer.rs  simple_mnist.rs  simple_net.rs  test.rs  two_layer_net.rs
src/algorithm/utils/: activation.rs  affine.rs  error.rs  gradient_descent.rs  mnist.rs  mod.rs  random.rs  random_choice.rs  relu.rs  sgd.rs  sigmoid.rs
src/algorithm/weight/: b1.rs  b2.rs  b3.rs  mod.rs  w1.rs  w2.rs  w3.rs
src/boston_price/: model.rs
src/burn_book/: burn_0.rs  burn_1.rs  burn_2.rs  custom.rs  mod.rs
src/fast_deep/: fast_deep01.py  fast_deep01.rs  fast_deep02.rs  mod.rs
src/math/: math01.rs  mod.rs  numpy.rs  probility.rs
src/pytoch/: pytoch0.ipynb  pytoch01.ipynb  pytoch02.ipynb
src/pytorch/: 00.py  00_tensor.py  01_linear_regression.py  02.py  02_autograd.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  1.py  10.py  11.py  13.py  14.py  16.py  test.py
src/university/: perceptron.rs
