[package]
name = "deep_learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.10.0", features = ["wgpu"] }
ndarray = "0.15.6"
plotters = "0.3.5"
image = "0.23"
ndarray-stats = "0.5.1"
mnist = "0.6.0"
itertools = "0.10.0"