[package]
name = "deep_learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.11.1", features = ["wgpu", "train"] }
ndarray = "0.15.6"
plotters = "0.3.5"
image = "0.23"
ndarray-stats = "0.5.1"
itertools = "0.10.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3.0"
rayon = "1.8.1"
polars = { version = "0.36.2", features = ["ndarray","to_dummies","lazy","describe","strings","list_count","describe","cov"] }
rand = "0.8.5"
